--- a/format-model/_widths.scss
+++ b/format-model/_widths.scss
@@ -1,14 +1,23 @@
 // =============================
-// Viewport Width Utility Helper Attributes
+// Enable Private Variables
 // =============================
 
-// Viewport Width Utility Helper Attributes are generated via the below mixin to namespace attributes for certain viewports.
+$_widths-enable: true !default;
+
+// =============================
+// Core Viewport Width Utility Helper Attributes
+// =============================
+
+//
+// Core Viewport Width Utility Helper Attributes are generated via the below mixin to create attributes for certain viewports.
 // The advantage to this, is it allows a responsive layout to be generated from the attributes added to a certain element.
-// Note - Grid__Item class within grids partial, is used to replace any full width helper class.
-// Example Use: data-desk="desk-4-12" data-lap="lap-4/6".
+// Example Use: data-desk="span-4-12" data-lap="span-4/6".
+//
+// Note - Global Classes are also generated and are to be used when an elements spacing is consistant across all viewports.
+//
 
-// Note - Un-namespaced Classes are also generated and are to be used globally when an elements spacing is consistant across all viewports.
-
-@include generate-grid-percentage-batch();
+@if ($_widths-enable) {
+	@include generate-grid-percentage-batch();
+}
 
 
